--- a/src/App.css
+++ b/src/App.css
@@ -6,56 +6,12 @@
 	
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body, html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-/* styles.css */
-
-.bg-yellow-200 {
-  background-color: #fefcbf;
-}
-
-.text-red-500 {
-  color: #f56565;
-}
-
-.font-bold {
-  font-weight: bold;
-}
-
-.cursor-pointer {
-  cursor: pointer;
+.bg-gray-900.bg-opacity-80 {
+  background-color: rgba(23, 23, 23, 0.083);
 }
